--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,10 +6,39 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 100%;
   color: white;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.App-projects{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.App-data {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  margin-top: -50px;
+}
+
+.App-data p{
+  margin: 30px;
+  color: aqua;
+}
+
+.App-data span{
+  margin-left: 10px;
+  color: white;
+}
+
+#Grade{
+  font-size: xx-large;
+  color: red;
 }
